# hello-world

./: .gitignore  README.md  hello-world-project-plan.md  package-lock.json  package.json  tsconfig.base.json
.hello-world-harness/: feature_list.json  progress.md  sprint_plan.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/: AGENT_PRESETS.md  CHAT_PROTOCOL.md  CONNECTION_DIAGNOSTICS.md  COST_ESTIMATION.md  DEPLOYMENT.md  DESKTOP.md  FEATURE_MATRIX.md  FILE_INPUT.md  FINAL_CAPABILITY_MATRIX.md  IMPORT_EXPORT.md  KNOWLEDGE_BASE.md  MOBILE.md  MODEL_CAPABILITIES.md  MODEL_COMPARISON.md  MODEL_ROUTING.md  NATIVE_INPUTS.md  PROMPT_TEMPLATES.md  PROVIDER_ADAPTERS.md  QUALITY_REVIEW.md  SECURITY_MODEL.md  SESSION_ORGANIZATION.md  STORAGE_MODEL.md  SYNC_FOUNDATION.md  TARGET_ARCHITECTURE.md  THREE_TERMINAL_SHELLS.md  TOOL_SECURITY.md  USAGE_ANALYTICS.md  WEB_MVP.md  WEB_PROVIDER_RUNTIME.md  WEB_SEARCH.md
scripts/: build-web.mjs  review-check.mjs  verify-structure.mjs
tests/: agent-presets.test.ts  chat-core.test.ts  connection-diagnostics.test.ts  cost-estimation.test.ts  desktop-code-execution.test.ts  desktop-command-allowlist.test.mjs  desktop-plugin-manager.test.ts  file-input.test.ts  http-mcp.test.ts  import-export.test.ts  knowledge-base.test.ts  knowledge-ingestion.test.ts  model-capability.test.ts  model-comparison.test.ts  model-routing.test.ts  native-desktop.test.mjs  native-media.test.mjs  native-voice.test.mjs  platform-capability-matrix.test.ts  prompt-templates.test.ts  provider-store.test.ts  (+32 more)
(+52 files in other folders)
